# aerial_grasp

ball_releasing/: package.xml
ball_releasing/include/ball_releasing/: mfio_mission.h
ball_releasing/src/: ball_releasing.cpp
pid/controller/n3ctrl/launch/: ctrl_md.launch
pid/controller/n3ctrl/msg/: gp_output.msg
pid/controller/n3ctrl/script/: IGPR_test.py  clbfet_node.py  gp_node_cbf_mpc.py  send_pose.py  test_clbfet.py  ttest.py
pid/controller/n3ctrl/script/test_cf/: opti_node.py  opti_odom_with_v2.py  ramp.py
pid/controller/n3ctrl/src/: N3CtrlFSM.h  N3CtrlFSM_control.cpp  n3ctrl_node.cpp
pid/controller/n3ctrl/srv/: AddData2Model.srv
pid/msg_transfer/: CMakeLists.txt
pid/msg_transfer/include/: msg_transfer.h
pid/msg_transfer/msg/: PositionCommand.msg
pid/msg_transfer/src/: main.cpp  msg_transfer.cpp
src/arm_test/: CMakeLists.txt  package.xml
src/arm_test/include/arm_test/: arm_test.hpp
src/arm_test/msg/: controls.msg  gripper.msg  position.msg  track.msg
src/arm_test/src/: armtest.cpp  main.cpp
src/auxiliary/: .gitignore  CMakeLists.txt  package.xml
src/auxiliary/include/auxiliary/: OpticalFlow.hpp  arm.hpp  auxiliary.hpp  ultrasonic.hpp
src/auxiliary/msg/: opticalflow.msg
src/auxiliary/src/: arm.cpp  auxiliary.cpp  datapackage.cpp  main.cpp  opticalflow.cpp  ultrasonic.cpp
src/ball_releasing/: CMakeLists.txt
src/ball_releasing/src/: ball_releasing.cpp
src/controller/djiros/launch/: djiros.launch
src/controller/n3ctrl/: CMakeLists.txt
src/controller/n3ctrl/script/: IGPR.py  adaptive_clbf.py  clbfet_node_conincb.py  dynamics.py  gp_node.py  model_service.py  mpc.py  test_clbfetgood.py  uav1_gp_node.py
src/controller/n3ctrl/script/cf_test/: swarmSequencehjl.py
src/controller/n3ctrl/script/test_cf/: opti_odom_with_v.py
src/controller/n3ctrl/script/test_cf/cache/: 05C5AF70.json  1042AFA8.json
src/controller/n3ctrl/src/: controller.cpp  controller.h  input.cpp  input.h  n3ctrl_node.cpp
src/dji_sdk/launch/: sdk.launch
src/flight_control/: CMakeLists.txt  package.xml
src/flight_control/include/flight_control/: flightcontrol.hpp  mpc.hpp  pid.hpp
src/flight_control/launch/: fly.launch
src/flight_control/msg/: mpcinputs.msg  state.msg
src/flight_control/src/: flightcontrol.cpp  main.cpp  mpc.cpp  pid.cpp
src/linear_mpc/: CMakeLists.txt  package.xml
src/linear_mpc/cfg/: LinearMPC.cfg
src/linear_mpc/include/linear_mpc/: linear_mpc.h
src/linear_mpc/launch/: crazyflie2_hovering_example.launch  go_to_set_point.launch
src/linear_mpc/lib/: ldl.c  matrix_support.c  solver.c  solver.h  util.c
src/linear_mpc/resources/: controller_crazyflie2.yaml  linear_mpc_crazyflie2.yaml
src/linear_mpc/src/: linear_mpc.cpp
src/linear_mpc/srv/: SetPose.srv  SetTrajectory.srv
src/manipulator_controller/: CMakeLists.txt  package.xml
src/manipulator_controller/src/: 00_manipulator_console.h  01_package.cpp  01_package.h  02_protocol.cpp  02_protocol.h  03_serial_ctrl.cpp  03_serial_ctrl.h  04_dji_mfio_mission.cpp  04_dji_mfio_mission.h  main.cpp
src/manipulator_msgs/: CMakeLists.txt  package.xml
src/manipulator_msgs/msg/: id_pos_time.msg  serial_buf.msg
src/msg_transfer/: CMakeLists.txt  package.xml
src/msg_transfer/include/: msg_transfer.h
src/msg_transfer/src/: main.cpp  msg_transfer.cpp
src/opti_track/: README.md
src/opti_track/bebop_odom/: CMakeLists.txt  package.xml
src/opti_track/bebop_odom/scripts/: maste.py  odom.py  opti_odom.py  receiveOdomTest.py  slave.py
src/opti_track/bebop_odom/src/: bebop_serial_example.cpp  receiveOdomTest.cpp
src/opti_track/opti_msgs/: CMakeLists.txt  package.xml
src/opti_track/opti_msgs/msg/: Odom.msg
